--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -631,8 +631,8 @@
     </fragment>
     <fragment
         android:id="@+id/wallpaperSettingsFragment"
-        android:name="org.mozilla.fenix.settings.WallpaperSettingsFragment"
-        android:label="@string/preferences_wallpapers"/>
+        android:name="org.mozilla.fenix.settings.wallpaper.WallpaperSettingsFragment"
+        android:label="@string/customize_wallpapers"/>
 
     <fragment
         android:id="@+id/dataChoicesFragment"
